<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.main.ProfileFragment">

    <View
        android:id="@+id/title_cl"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/toolbar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="101dp"
        android:background="@drawable/view_bg"
        android:orientation="vertical" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewCircleNoStroke"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:elevation="7dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCircleNoStroke" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_margin="16dp">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/namelayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/name"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameedt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emaillayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailedt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.tfcporciuncula.phonemoji.PhonemojiTextInputLayout
                    android:id="@+id/mobilelayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/mobile_number"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    app:phonemoji_showFlag="false">

                    <com.tfcporciuncula.phonemoji.PhonemojiTextInputEditText
                        android:id="@+id/mobileedt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.tfcporciuncula.phonemoji.PhonemojiTextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/genderlayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/gender"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/genderedt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:inputType="none"
                        android:paddingTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/joindatelayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/join_date"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/joindateedt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingTop="24dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/updatebtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>







